--- a/myblog/blog/templates/login1.html
+++ b/myblog/blog/templates/login1.html
@@ -13,8 +13,9 @@
 
 			  <p><label><b>密码：</b></label></p>
 			  <input type="password" placeholder="Enter Password" name="psw" required>
-				
-			  <p><button type="submit" class="button big fit">登录</p></button></p>
+				<br>
+				<br>
+			  <p><input type="submit" class="button big fit" value = "登录"></p></input></p>
 			  <p><input type="checkbox" checked=""> 记住我</p>
 			</div>
 
@@ -39,10 +40,11 @@
 			<input type="text" placeholder="Password:" name="password-repeat" required>
 			<p><label><b>邮箱：</b></label></p>
 			<input type="text" placeholder="Your Email:" name="email" required>
-			<div class="container" style="background-color:#f1f1f1">
+			<div class="container" style="background-color:#f1f1f1" >
 			<p><span><input type="checkbox" checked="">我接受xxx用户协议<a href="#">LLLLL</a>。</span></p>
 			</div>
-				<p><button type="submit" class="button big fit" >注册</button></p>
+			<br>
+				<p><input type="submit" class="button big fit" value ="注册"></p>
 		  </div>
 		 </form>
 </div>
