--- a/myblog/blog/templates/register.html
+++ b/myblog/blog/templates/register.html
@@ -11,11 +11,12 @@
 			<input type="text" placeholder="Password:" name="password-repeat" required>
 			<p><label><b>邮箱：</b></label></p>
 			<input type="text" placeholder="Your Email:" name="email" required>
+			<br>
 			<p><input type="checkbox" checked="">记住密码？</p>
 			<p><span><input type="checkbox" checked="">我接受xxx用户协议<a href="#">LLLLL</a>。</span></p>
-			
+			<br>
 			<div class ="clearfix">
-				<button type="submit" class='signupbtn' style="margin-right:10px;" >注册</button>&nbsp;&nbsp;
+				<input type="submit" class='signupbtn' style="margin-right:10px;" >注册</input>&nbsp;&nbsp;
 				<button type="button" onclick="document.getElementById('register').style.display='none'" class='cancelbtn'>取消</button>
 			</div>
 		  </div>
