--- a/myblog/blog/templates/edit.html
+++ b/myblog/blog/templates/edit.html
@@ -30,7 +30,7 @@ $("#file0").change(function(){
 			window.location.reload();
             return;
 	}
-  var obj
+  var obj;
   var objUrl = getObjectURL(this.files[0]) ;   
   if (objUrl) {  
     $("#img0").attr("src", objUrl) ;  
